--- a/.circleci/files/backend.yml
+++ b/.circleci/files/backend.yml
@@ -32,7 +32,7 @@ Resources:
       InstanceType: t2.micro
       SecurityGroups:
         - Ref: InstanceSecurityGroup
-      KeyName: udapeople # If you use another key pair name, you should change this value to match.
+      KeyName: udapeople-2 # If you use another key pair name, you should change this value to match.
       # If this ami id is not available for you, you can find another (https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/finding-an-ami.html)
       # Ubuntu 18 or higher works fine
       ImageId: ami-068663a3c619dd892 #ami-00ddb0e5626798373 
