--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -534,7 +534,9 @@ jobs:
               if echo $Stacks | grep -q "udapeople-frontend-${OldWorkflowID}"
               then
                 aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
-                aws cloudformation delete-stack --stack-name udapeople-frontend-${OldWorkflowID}
+                aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
+                aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
+
               fi
             else
               echo "--------------- Error in the Cleanup ---------------"
