--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -53,4 +53,4 @@
   roles:
     # Your code here
     - configure-server
-    # - configure-prometheus-node-exporter 
+    - configure-prometheus-node-exporter 
